[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "uniswap-breakouts"
requires-python = ">=3.10"
version = "0.0.1"
dependencies = [
    "python-dotenv~=1.0.0",
    "requests~=2.30.0",
    "web3~=6.3.0",
    "dataclasses-json~=0.5.7",
    "pandas~=2.1",
    "toml==0.10.2"
]

[project.optional-dependencies]
linting = [
    "black~=23.3",
    "pylint~=2.17",
    "mypy~=1.3.0",
    "types-toml~=0.10.8.6",
    "types-requests~=2.31.0.1",
    "pandas-stubs~=2.0.3.230814"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"uniswap_breakouts.constants" = ["*.json"]


[tool.black]
line-length = 110
skip-string-normalization = true


[tool.pylint.main]
# Files or directories matching the regex patterns are skipped. The regex matches
## against base names, not paths. The default value ignores Emacs file locks
ignore-patterns = [".*json", ".*txt", ".*toml", "env"]

# Minimum Python version to use for version dependent checks. Will default to the
# version used to run pylint.
py-version = "3.10"


[tool.pylint.basic]

disable = [
    "C0114",  # No module docstrings
    "C0115",  # No class docstrings
    "C0116",  # No function docstrings
]

good-names = ['i', 'j', 'k', 'ex', 'Run', '_', 'e', 'ts', 'tg']

[tool.pylint.design]
# Maximum number of arguments for function / method.
max-args = 5


[tool.pylint.exceptions]
# Exceptions that will emit a warning when caught.
overgeneral-exceptions = ["builtins.BaseException", "builtins.Exception"]


[tool.pylint.format]
# String used as indentation unit. This is usually "    " (4 spaces) or "\t" (1
# tab).
indent-string = "    "

# Maximum number of characters on a single line.
max-line-length = 110

